--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Redux App</title>
+
+    <script>const whTooltips = {colorLinks: true, iconSize: true, iconizeLinks: true, renameLinks: true};</script>
+    <script src="https://wow.zamimg.com/widgets/power.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
